--- a/style/index.css
+++ b/style/index.css
@@ -25,16 +25,14 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 * {
-    box-sizing: border-box;
-    max-width: 1536px;
+    /* max-width: 1536px; */
     margin: auto;
-    /* border:1px solid blue; */
 }
 
 html {
     margin: 0px;
     font-size: 62.5%;
-    min-width: 864px;
+    /* min-width: 864px; */
 }
 
 header {
@@ -57,6 +55,7 @@ header {
 }
 
 .hOne {
+    font-family: serif;
     font-size: 5.6rem;
     font-weight: 700;
     margin: 0 20px;
@@ -64,6 +63,7 @@ header {
 }
 
 .hTwo {
+    font-family: serif;
     font-size: 4rem;
     font-style: italic;
     font-weight: 700;
@@ -72,82 +72,101 @@ header {
 
 nav{
     display: flex;
-    
     justify-content: left;
     align-items: center;
     height: auto;
     margin: 20px 80px;
 }
 
-    nav a {
-        width: 96px;
-        font-size: 1.6rem;
-        font-family: sans-serif;
-        font-weight: 700;
-        padding: 6px;
-        border: 1px solid black;
-        border-radius: 16px;
-        text-align: center;
-        text-decoration: none;
-        color: black;
-        background: white;
-        transition: .3s;
-        
-    }
-    nav a:hover {
-        color: yellow;
-        background: black;
-        font-style: oblique;
-    }
+nav a {
+    width: 80px;
+    font-size: 1.6rem;
+    font-family: sans-serif;
+    font-weight: 700;
+    padding: 6px;
+    border: 1px solid black;
+    border-radius: 16px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    background: white;
+    transition: .3s;
+    
+}
 
-    nav a.currentPage {
-        width: 106px;
-        border: 6px solid blue;
-        border-radius: 21px;
+nav a:hover {
+    color: yellow;
+    background: black;
+    font-style: oblique;
+}
 
-    }
+nav a.currentPage {
+    width: 90px;
+    border: 6px solid blue;
+    border-radius: 21px;
 
+}
 
+.homeBody {
+    height: 100%;
+    width: 98vw;
+    max-width: 1536px;
+}
 
 .bodyContainer {
+    display: inline-flex;
+    margin-left: 53%;
+}
+
+.bodyText {
+    width: 336px;
     display: flex;
-    justify-content: flex-start;
+    flex-flow: wrap;
+}
+
+.bodyText p {
+    font-family: serif;
+    font-size: 1.5rem;
+}
+
+.hThree {
+    font-family: sans-serif;
+    font-size: 3rem;
+    font-weight: 600;
+    flex-wrap: wrap;
+}
+
+.boldText {
+    font-weight: 600;
+    color: blue;
+}
+
+.portfolio {
+    width: 98vw;
+    max-width: 1536px;
+    margin: -240px 0 0 0x;
+    display: inline-flex;
 }
 
 .photoNCG {
-    width: 46vw;
-    min-width: 432px;
-    margin-left: 10px;
+    width: 50vw;
+    padding: 0 2vw;
+    max-width: 748px;
+    margin: -240px 0 0 0;
 }
 
 .photoNCG img {
     width: 100%;
 }
 
-section.bodyContent {
-    align-content: flex-start;
-}
-
-.bodyContent {
-    width: 49vw;
-    min-width: 320px;
-    padding-left: 1vw;
+.myProject {
+    width: 48vw;
     display: flex;
-    flex-flow: wrap;
+    flex-direction: column;
 }
 
-.bodyContent p {
-    font-size: 1.5rem;
-    padding-right: 2vw;
-}
-
-.bodyText {
-    width: 368px;
-}
-
-.boldText {
-    font-weight: 600;
-    color: blue;
+.myProjectButton {
+    display: flex;
 }
 
 .button {
@@ -170,22 +189,14 @@ section.bodyContent {
     font-style: oblique;
 }
 
-p.hThree {
-    font-size: 3rem;
-    font-weight: 600;
-    flex-wrap: wrap;
-}
-
 .bodyPhotos {
     display:flex;
-    margin-top: 0;
-    width: 49vw;
-    max-width: 720px;
-    padding-right: 64px;
     justify-content: space-between;
     flex-wrap: wrap;
+    height: auto;
+    padding: 0 2vw 2vw 0;
+    object-fit: contain;
     overflow: hidden;
-    
 }
 
 .photo {
@@ -199,7 +210,6 @@ p.hThree {
     border: 1px solid black;
     box-sizing: border-box;
     justify-content: center;
-    align-items: center;
 }
 
 
@@ -216,7 +226,7 @@ footer {
     display: flex;
     background-color: black;
     border-radius: 32px;
-    margin: -3px 16px 0 16px;
+    margin: -2px 16px 0 16px;
     flex-flow: column wrap;
     
 }
@@ -241,202 +251,14 @@ footer {
         min-width: 576px;
     }
     
-    header {
-        min-width: 576px;
-        max-width: 864px;
-        height: auto;
-    }
     
-    .banner {
-        display: flex;
-        background-color: lightyellow;
-        border-radius: 32px;
-        margin: 16px;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        align-items: baseline;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-    
-    .hOne {
-        font-size: 4.8rem;
-        font-weight: 700;
-        margin: 0;
-        text-shadow: 2px 2px lightgray;
-    }
-    
-    .hTwo {
-        font-size: 3.2rem;
-        font-style: italic;
-        font-weight: 700;
-        margin: 0;
-    }
-    
-    nav{
-        display: flex;
-        
-        justify-content: left;
-        align-items: center;
-        height: auto;
-        margin: 20px 80px;
-    }
-    
-        nav a {
-            width: 96px;
-            font-size: 1.6rem;
-            font-family: sans-serif;
-            font-weight: 700;
-            padding: 6px;
-            border: 1px solid black;
-            border-radius: 16px;
-            text-align: center;
-            text-decoration: none;
-            color: black;
-            background: white;
-            transition: .3s;
-            
-        }
-        nav a:hover {
-            color: yellow;
-            background: black;
-            font-style: oblique;
-        }
-    
-        nav a.currentPage {
-            width: 106px;
-            border: 6px solid blue;
-            border-radius: 21px;
-    
-        }
-    
-    
-    
-    .bodyContainer {
-        display: flex;
-        justify-content: flex-start;
-    }
-    
-    .photoNCG {
-        width: 46vw;
-        min-width: 384px;
-        margin-left: 10px;
-    }
-    
-    .photoNCG img {
-        width: 100%;
-    }
-    
-    section.bodyContent {
-        align-content: flex-start;
-    }
-    
-    .bodyContent {
-        width: 48vw;
-        min-width: 320px;
-        padding-left: 1vw;
-        display: flex;
-        flex-flow: wrap;
-    }
-    
-    .bodyContent p {
-        font-size: 1.5rem;
-        padding-right: 2vw;
-    }
-    
-    .bodyText {
-        width: 384px;
-    }
-    
-    .boldText {
-        font-weight: 600;
-        color: blue;
-    }
-    
-    .button {
-        font-size: 1.6rem;
-        font-family: sans-serif;
-        font-weight: 700;
-        padding: 6px;
-        border: 1px solid black;
-        border-radius: 16px;
-        text-align: center;
-        text-decoration: none;
-        color: black;
-        background: lightyellow;
-        transition: .3s;
-    }
-    
-    .button:hover {
-        color: yellow;
-        background: blue;
-        font-style: oblique;
-    }
-    
-    p.hThree {
-        font-size: 3rem;
-        font-weight: 600;
-        flex-wrap: wrap;
-    }
-    
-    .bodyPhotos {
-        display:flex;
-        margin-top: 0;
-        width: 49vw;
-        max-width: 720px;
-        margin-right: 0px;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        overflow: hidden;
-        
-    }
-    
-    .photo {
-        background:url(https://picsum.photos/150);
-        height: 15vw;
-        min-height: 96px;
-        max-height: 200px;
-        width: 15vw;
-        min-width: 96px;
-        max-width: 200px;
-        margin-top: 3vw;
-        border: 1px solid black;
-        box-sizing: border-box;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    
-    
-    
-    footer {
-        min-width: 576px;
-        max-width: 864px;
-        height: auto;
-    }
-    
-    /* .footerBanner {
-        display: flex;
-        background-color: black;
-        border-radius: 32px;
-        margin: 24px 16px 0 16px;
-        flex-flow: column wrap;
-    }
-    
-    .footerText {
-        text-align: center;
-        color: lightyellow;
-        font-size: 2.4rem;
-        line-height: 200%;
-        padding: 16px 0 24px 0;
-        
-    } */
-    
-}
 
 
 
 @media (max-width: 576px){
+    html {
+        min-width: 360px;
+    }
 
 
 }
