--- a/style/index.css
+++ b/style/index.css
@@ -24,15 +24,14 @@ time, mark, audio, video {
 	font: inherit;
     vertical-align: baseline;
 }
+
 * {
-    /* max-width: 1536px; */
     margin: auto;
 }
 
 html {
     margin: 0px;
     font-size: 62.5%;
-    /* min-width: 864px; */
 }
 
 header {
@@ -42,178 +41,175 @@ header {
     height: auto;
 }
 
-.banner {
-    display: flex;
-    background-color: lightyellow;
-    border-radius: 32px;
-    margin: 16px;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: baseline;
-    padding-left: 40px;
-    padding-right: 40px;
-}
+    .banner {
+        display: flex;
+        background-color: lightyellow;
+        border-radius: 32px;
+        margin: 16px;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        align-items: baseline;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
 
-.hOne {
-    font-family: serif;
-    font-size: 5.6rem;
-    font-weight: 700;
-    margin: 0 20px;
-    text-shadow: 2px 2px lightgray;
-}
+    .hOne {
+        font-family: serif;
+        font-size: 6.4rem;
+        font-weight: 700;
+        margin: 0 20px;
+        text-shadow: -2px 2px white;
+    }
 
-.hTwo {
-    font-family: serif;
-    font-size: 4rem;
-    font-style: italic;
-    font-weight: 700;
-    margin: 0 20px;
-}
+    .hTwo {
+        font-family: serif;
+        font-size: 4rem;
+        font-style: italic;
+        font-weight: 700;
+        margin: 0 20px;
+    }
 
-nav{
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    height: auto;
-    margin: 20px 80px;
-}
+    nav{
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        height: auto;
+        margin: 20px 80px;
+    }
 
-nav a {
-    width: 80px;
-    font-size: 1.6rem;
-    font-family: sans-serif;
-    font-weight: 700;
-    padding: 6px;
-    border: 1px solid black;
-    border-radius: 16px;
-    text-align: center;
-    text-decoration: none;
-    color: black;
-    background: white;
-    transition: .3s;
-    
-}
+    nav a {
+        width: 80px;
+        font-size: 1.6rem;
+        font-family: sans-serif;
+        font-weight: 700;
+        padding: 6px;
+        border: 1px solid black;
+        border-radius: 16px;
+        text-align: center;
+        text-decoration: none;
+        color: black;
+        background: white;
+        transition: .3s;
+    }
 
-nav a:hover {
-    color: yellow;
-    background: black;
-    font-style: oblique;
-}
+    nav a:hover {
+        color: yellow;
+        background: black;
+        font-style: oblique;
+    }
 
-nav a.currentPage {
-    width: 90px;
-    border: 6px solid blue;
-    border-radius: 21px;
+    nav a.currentPage {
+        width: 90px;
+        border: 6px solid blue;
+        border-radius: 21px;
+    }
 
-}
-
-.homeBody {
+body.homePage {
     height: 100%;
     width: 98vw;
     max-width: 1536px;
 }
 
-.bodyContainer {
-    display: inline-flex;
-    margin-left: 53%;
-}
+    .bodyContainer {
+        display: inline-flex;
+        margin-left: 53.5%;
+    }
 
-.bodyText {
-    width: 336px;
-    display: flex;
-    flex-flow: wrap;
-}
+    .bodyText {
+        width: 336px;
+        display: flex;
+        flex-flow: wrap;
+    }
 
-.bodyText p {
-    font-family: serif;
-    font-size: 1.5rem;
-}
+    .bodyText p {
+        font-family: serif;
+        font-size: 1.5rem;
+    }
 
-.hThree {
-    font-family: sans-serif;
-    font-size: 3rem;
-    font-weight: 600;
-    flex-wrap: wrap;
-}
+    .hThree {
+        font-family: sans-serif;
+        font-size: 3rem;
+        font-weight: 600;
+        flex-wrap: wrap;
+    }
 
-.boldText {
-    font-weight: 600;
-    color: blue;
-}
+    .boldText {
+        font-weight: 600;
+        color: blue;
+    }
 
-.portfolio {
-    width: 98vw;
-    max-width: 1536px;
-    margin: -240px 0 0 0x;
-    display: inline-flex;
-}
+    .portfolio {
+        width: 98vw;
+        max-width: 1536px;
+        margin: -240px 0 0 0x;
+        display: inline-flex;
+    }
 
-.photoNCG {
-    width: 50vw;
-    padding: 0 2vw;
-    max-width: 748px;
-    margin: -240px 0 0 0;
-}
+    .photoNCG {
+        width: 50vw;
+        padding: 0 8px;
+        min-width: 432px;
+        max-width: 748px;
+        margin: -240px 0 0 0;
+    }
 
-.photoNCG img {
-    width: 100%;
-}
+    .photoNCG img {
+        width: 100%;
+    }
 
-.myProject {
-    width: 48vw;
-    display: flex;
-    flex-direction: column;
-}
+    .myProject {
+        width: 48vw;
+        display: flex;
+        flex-direction: column;
+    }
 
-.myProjectButton {
-    display: flex;
-}
+    .myProjectButton {
+        display: flex;
+    }
 
-.button {
-    font-size: 1.6rem;
-    font-family: sans-serif;
-    font-weight: 700;
-    padding: 6px;
-    border: 1px solid black;
-    border-radius: 16px;
-    text-align: center;
-    text-decoration: none;
-    color: black;
-    background: lightyellow;
-    transition: .3s;
-}
+    .button {
+        font-size: 1.6rem;
+        font-family: sans-serif;
+        font-weight: 700;
+        padding: 6px;
+        border: 1px solid black;
+        border-radius: 16px;
+        text-align: center;
+        text-decoration: none;
+        color: black;
+        background: lightyellow;
+        transition: .3s;
+    }
 
-.button:hover {
-    color: yellow;
-    background: blue;
-    font-style: oblique;
-}
+    .button:hover {
+        color: yellow;
+        background: blue;
+        font-style: oblique;
+    }
 
-.bodyPhotos {
-    display:flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    height: auto;
-    padding: 0 2vw 2vw 0;
-    object-fit: contain;
-    overflow: hidden;
-}
+    .bodyPhotos {
+        display:flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        height: auto;
+        padding: 0 3vw 0 0;
+        object-fit: contain;
+        overflow: hidden;
+    }
 
-.photo {
-    height: 12.5vw;
-    min-height: 96px;
-    max-height: 200px;
-    width: 12.5vw;
-    min-width: 96px;
-    max-width: 200px;
-    margin-top: 32px;
-    border: 1px solid black;
-    box-sizing: border-box;
-    justify-content: center;
-}
-
-
-
+    .photo {
+        height: 12.5vw;
+        min-height: 96px;
+        max-height: 200px;
+        width: 12.5vw;
+        min-width: 96px;
+        max-width: 200px;
+        margin-top: 24px;
+        border: 1px solid black;
+        box-sizing: border-box;
+        justify-content: center;
+        box-shadow: 8px 8px lightgray;
+    }
 
 footer {
     width: 98vw;
@@ -222,43 +218,355 @@ footer {
     height: auto;
 }
 
-.footerBanner {
-    display: flex;
-    background-color: black;
-    border-radius: 32px;
-    margin: -2px 16px 0 16px;
-    flex-flow: column wrap;
-    
-}
+    .footerBanner {
+        display: flex;
+        background-color: black;
+        border-radius: 32px;
+        margin: -2px 16px 16px 16px;
+        flex-flow: column wrap;
+    }
 
-.footerText {
-    text-align: center;
-    color: lightyellow;
-    font-size: 2.4rem;
-    line-height: 200%;
-    padding: 16px 0 24px 0;
-    
-}
+    .footerText {
+        text-align: center;
+        color: lightyellow;
+        font-size: 2.4rem;
+        line-height: 200%;
+        padding: 8px 0 16px 0;
+    }
 
 
 
 
 
 
-
-@media (max-width: 864px){
+@media (max-width: 863px){
     html {
         min-width: 576px;
     }
+
+    header {
+        width: 98vw;
+        min-width: 560px;
+        max-width: 863px;
+    }
     
+        .banner {
+            display: flex;
+            background-color: lightyellow;
+            border-radius: 32px;
+            margin: 16px;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            align-items: baseline;
+            padding-left: 40px;
+            padding-right: 40px;
+        }
     
+        .hOne {
+            font-family: serif;
+            font-size: 5.6rem;
+            font-weight: 700;
+            margin: 0;
+            text-shadow: -2px 2px white;
+        }
+    
+        .hTwo {
+            font-family: serif;
+            font-size: 2.8rem;
+            font-style: italic;
+            font-weight: 700;
+            margin: 0;
+        }
+    
+        nav{
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            height: auto;
+            margin: 20px 80px;
+        }
+    
+        nav a {
+            width: 80px;
+            font-size: 1.6rem;
+            font-family: sans-serif;
+            font-weight: 700;
+            padding: 6px;
+            border: 1px solid black;
+            border-radius: 16px;
+            text-align: center;
+            text-decoration: none;
+            color: black;
+            background: white;
+            transition: .3s;
+        }
+    
+        nav a:hover {
+            color: yellow;
+            background: black;
+            font-style: oblique;
+        }
+    
+        nav a.currentPage {
+            width: 90px;
+            border: 6px solid blue;
+            border-radius: 21px;
+        }
+    
+    body.homePage {
+        height: 100%;
+        width: 98vw;
+        max-width: 1536px;
+    }
+    
+        .bodyContainer {
+            display: inline-flex;
+            margin-left: 62.5%;
+        }
+    
+        .bodyText {
+            width: 160px;
+            display: flex;
+            flex-flow: wrap;
+        }
+    
+        .bodyText p {
+            text-align: center;
+        }
+    
+        .hThree {
+            font-size: 2.5rem;
+            font-weight: 600;
+        }
+    
+        .portfolio {
+            width: 98vw;
+            max-width: 863px;
+            display: block;
+        }
+    
+        .photoNCG {
+            width: 55vw;
+            padding: 0 2vw 0 6vw;
+            min-width: 288px;
+            max-width: 636px;
+            margin: -440px 0 0 0;
+        }
+    
+        .myProject {
+            width: 82vw;
+            margin: -2px 10vw 0 8vw;
+            padding-top: 24px;
+            display: flex;
+            flex-direction: column;
+            border-top: 2px solid black;
+        }
+    
+        .myProjectButton {
+            display: flex;
+            justify-content: center;
+        }
+    
+        .bodyPhotos {
+            display:flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            height: auto;
+            padding: 0 2vw 2vw 0;
+            margin: 0 3vw 0 5vw;
+            object-fit: contain;
+            overflow: hidden;
+        }
+    
+        .photo {
+            height: 20vw;
+            min-height: 144px;
+            max-height: 200px;
+            width: 20vw;
+            min-width: 144px;
+            max-width: 200px;
+            margin: 24px 12px 0px;
+        }
+    
+    footer {
+        width: 98vw;
+        min-width: 560px;
+        max-width: 863px;
+    }
+    
+        .footerBanner {
+            margin: 16px;
+            flex-flow: column wrap;
+        }
+    
+}    
+
+
+
 
 
 
 @media (max-width: 576px){
     html {
-        min-width: 360px;
+        min-width: 344px;
+        max-width: 575px;
+        background-color: purple;
     }
+
+    header {
+        width: 98vw;
+        min-width: 344px;
+        max-width: 575px;
+    }
+    
+        .banner {
+            display: flex;
+            background-color: lightyellow;
+            border-radius: 32px;
+            margin: 16px;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            align-items: baseline;
+            padding-left: 40px;
+            padding-right: 40px;
+        }
+    
+        .hOne {
+            font-family: serif;
+            font-size: 5.6rem;
+            font-weight: 700;
+            margin: 0;
+            text-shadow: -2px 2px white;
+        }
+    
+        .hTwo {
+            font-family: serif;
+            font-size: 2.8rem;
+            font-style: italic;
+            font-weight: 700;
+            margin: 0;
+        }
+    
+        nav{
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            height: auto;
+            margin: 20px 80px;
+        }
+    
+        nav a {
+            width: 80px;
+            font-size: 1.6rem;
+            font-family: sans-serif;
+            font-weight: 700;
+            padding: 6px;
+            border: 1px solid black;
+            border-radius: 16px;
+            text-align: center;
+            text-decoration: none;
+            color: black;
+            background: white;
+            transition: .3s;
+        }
+    
+        nav a:hover {
+            color: yellow;
+            background: black;
+            font-style: oblique;
+        }
+    
+        nav a.currentPage {
+            width: 90px;
+            border: 6px solid blue;
+            border-radius: 21px;
+        }
+    
+    body.homePage {
+        height: 100%;
+        width: 98vw;
+        max-width: 1536px;
+    }
+    
+        .bodyContainer {
+            display: inline-flex;
+            margin-left: 62.5%;
+        }
+    
+        .bodyText {
+            width: 160px;
+            display: flex;
+            flex-flow: wrap;
+        }
+    
+        .bodyText p {
+            text-align: center;
+        }
+    
+        .hThree {
+            font-size: 2.5rem;
+            font-weight: 600;
+        }
+    
+        .portfolio {
+            width: 98vw;
+            max-width: 863px;
+            display: block;
+        }
+    
+        .photoNCG {
+            width: 55vw;
+            padding: 0 2vw 0 6vw;
+            min-width: 288px;
+            max-width: 636px;
+            margin: -440px 0 0 0;
+        }
+    
+        .myProject {
+            width: 82vw;
+            margin: -2px 10vw 0 8vw;
+            padding-top: 24px;
+            display: flex;
+            flex-direction: column;
+            border-top: 2px solid black;
+        }
+    
+        .myProjectButton {
+            display: flex;
+            justify-content: center;
+        }
+    
+        .bodyPhotos {
+            display:flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            height: auto;
+            padding: 0 2vw 2vw 0;
+            margin: 0 3vw 0 5vw;
+            object-fit: contain;
+            overflow: hidden;
+        }
+    
+        .photo {
+            height: 20vw;
+            min-height: 144px;
+            max-height: 200px;
+            width: 20vw;
+            min-width: 144px;
+            max-width: 200px;
+            margin: 24px 12px 0px;
+        }
+    
+    footer {
+        width: 98vw;
+        min-width: 560px;
+        max-width: 863px;
+    }
+    
+        .footerBanner {
+            margin: 16px;
+            flex-flow: column wrap;
+        }
 
 
 }
